# inferix

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
inferix/: __init__.py  data_generator.py  features.py  infer.py  patterns.py  train.py
inferix/model/: .gitkeep  inferix_model.json  label_encoder.pkl
tests/: test_features.py  test_infer.py  test_patterns.py
